# VocalCortex

./: .gitignore  CMakeLists.txt  README.md  censor.txt  keyboard.h  keyboard.hpp  keyboardbutton.h  main.cpp  speechtotextservice.cpp  speechtotextservice.h  stt_engine.hpp  titan_window.cpp  titan_window.hpp  word_list.hpp
